# IDCM

./: CMakeLists.txt
resources/: resources.qrc
resources/data/: diskinfo.csv  pciinfo.csv
src/: main.cpp
src/BatteryInfo/: BatteryInfo.cpp  BatteryInfo.h  BatteryInfo.ui  CMakeLists.txt
src/CameraInfo/: CMakeLists.txt  CameraInfo.cpp  CameraInfo.h  CameraInfo.ui
src/DiskInfo/: CMakeLists.txt  DIskInfo.ui  DiskInfo.cpp  DiskInfo.h
src/MainWindow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
src/PciInfo/: CMakeLists.txt  PciInfo.cpp  PciInfo.h  PciInfo.ui  SpriteWidget.cpp  SpriteWidget.h
src/QHotKey/: CMakeLists.txt
src/Sprite/: CMakeLists.txt
src/windows/main/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui
